# hermes

./: README.md  hermes.json  pyproject.toml
examples/gml/: hermes.json  params.csv
examples/gml/new_sim/ics/: monofonic.conf  run_monofonic.sh
examples/gml/new_sim/sim/: gadget.param  run_gadget.sh
examples/gml/template/ics/: monofonic.conf  run_monofonic.sh
examples/gml/template/sim/: gadget.param  run_gadget.sh
hermes/: __main__.py  clean.py  config.py  copy.py  create.py  edit.py  multi.py  parse.py  patch.py  render.py  run.py  usedvalues.py
