[tool.poetry]
name = "hermes"
version = "0.1.0"
description = ""
authors = ["Connor Hainje <cmhainje@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"


[tool.poetry.scripts]
hermes = "hermes.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
